--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.4.1",
   "description": "Render Ember components 'outside' of an Ember application to create 'Islands of Richness' in a server-rendered application.",
   "directories": {
+    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember test"
+    "test": "ember try:testall"
   },
   "repository": "http://github.com/mitchlloyd/ember-islands",
   "engines": {
@@ -17,30 +18,30 @@
   "author": "Mitch Lloyd",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
-    "ember-cli": "0.1.15",
-    "ember-cli-app-version": "0.3.1",
-    "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-dependency-checker": "0.0.7",
-    "ember-cli-htmlbars": "^0.7.4",
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-cli": "0.2.3",
+    "ember-cli-app-version": "0.3.3",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.7",
+    "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.14.1",
+    "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
-    "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "ember-disable-prototype-extensions": "^1.0.0",
+    "ember-try": "0.0.4"
   },
   "keywords": [
     "ember-addon",
     "islands of richness",
     "ujs"
   ],
+  "dependencies": {
+    "ember-cli-babel": "^5.0.0"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "dependencies": {
-    "ember-cli-babel": "^4.3.0"
   }
 }
