--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-try": "0.0.7"
@@ -39,7 +38,8 @@
     "ujs"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.0.0"
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-version-checker": "^1.1.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
