--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
-    "ember-cli-version-checker": "1.1.4",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
@@ -42,7 +41,8 @@
     "ujs"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.3"
+    "ember-cli-babel": "^5.1.3",
+    "ember-cli-version-checker": "1.1.4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
