Use ember-getowner-polyfill to support Ember 2.x

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ujs"
   ],
   "dependencies": {
+    "ember-getowner-polyfill": "1.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
