--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-islands",
-  "version": "0.5.4",
+  "version": "1.0.0-beta.1",
   "description": "Render Ember components 'outside' of an Ember application to create 'Islands of Richness' in a server-rendered application.",
   "directories": {
     "doc": "doc",
