--- a/package.json
+++ b/package.json
@@ -9,40 +9,46 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:testall"
+    "test": "ember try:each"
   },
   "repository": "http://github.com/mitchlloyd/ember-islands",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
   "author": "Mitch Lloyd",
   "license": "MIT",
+  "engines": {
+    "node": ">= 0.12.0"
+  },
+  "dependencies": {
+    "ember-getowner-polyfill": "1.0.0",
+    "ember-cli-babel": "^5.1.7"
+  },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "ember-cli": "1.13.12",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.5",
-    "ember-cli-dependency-checker": "^1.0.1",
-    "ember-cli-htmlbars": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.3",
-    "ember-cli-release": "0.2.8",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "2.11.0",
+    "ember-cli-app-version": "^2.0.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-jshint": "^2.0.1",
+    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-release": "^0.2.9",
+    "ember-cli-shims": "^1.0.2",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-try": "0.0.6"
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.6.0",
+    "ember-resolver": "^2.0.3",
+    "ember-source": "^2.11.0",
+    "loader.js": "^4.0.10"
   },
   "keywords": [
     "ember-addon",
     "islands of richness",
     "ujs"
   ],
-  "dependencies": {
-    "ember-getowner-polyfill": "1.0.0"
-  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
