--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@
 /coverage/*
 /libpeerconnection.log
 npm-debug.log*
+yarn-error.log
 testem.log
 
-# Ember try temporary files
+# ember-try
 .node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
