--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "ember-islands",
   "version": "1.3.0",
   "description": "Render Ember components 'outside' of an Ember application to create 'Islands of Richness' in a server-rendered application.",
+  "keywords": [
+    "ember-addon",
+    "islands of richness",
+    "ujs"
+  ],
+  "license": "MIT",
+  "author": "Mitch Lloyd",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -12,43 +19,36 @@
     "test": "ember try:each"
   },
   "repository": "http://github.com/mitchlloyd/ember-islands",
-  "author": "Mitch Lloyd",
-  "license": "MIT",
-  "engines": {
-    "node": ">= 0.12.0"
-  },
   "dependencies": {
     "ember-getowner-polyfill": "^2.0.1",
-    "ember-cli-babel": "^5.1.7"
+    "ember-cli-babel": "^6.8.2"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.11.0",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "2.16.2",
+    "ember-cli-app-version": "^3.1.0",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-qunit": "^4.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-resolver": "^2.0.3",
-    "ember-source": "^2.13.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.5.0",
+    "ember-source": "^2.16.0",
     "loader.js": "^4.0.10"
   },
-  "keywords": [
-    "ember-addon",
-    "islands of richness",
-    "ujs"
-  ],
+  "engines": {
+    "node": "^4.5 || 6.* || >= 7.*"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "versionCompatibility": {
