--- a/package.json
+++ b/package.json
@@ -14,46 +14,56 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each"
   },
   "repository": "http://github.com/mitchlloyd/ember-islands",
   "dependencies": {
-    "ember-getowner-polyfill": "^2.0.1",
-    "ember-cli-babel": "^6.8.2"
+    "ember-cli-babel": "^7.20.5",
+    "ember-cli-htmlbars": "^5.1.2"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^3.0.0",
-    "ember-cli": "2.16.2",
-    "ember-cli-app-version": "^3.1.0",
-    "ember-cli-dependency-checker": "^2.0.1",
-    "ember-cli-eslint": "^4.0.0",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.0.1",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-shims": "^1.0.2",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.0",
-    "ember-source": "^2.16.0",
-    "jquery": "^3.3.0",
-    "loader.js": "^4.0.10"
+    "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
+    "babel-eslint": "^10.1.0",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-auto-import": "^1.5.3",
+    "ember-cli": "~3.19.0",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-export-application-global": "^2.0.1",
+    "ember-load-initializers": "^2.1.1",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^8.0.0",
+    "ember-source": "~3.19.0",
+    "ember-source-channel-url": "^2.0.1",
+    "ember-template-lint": "^2.8.0",
+    "ember-try": "^1.4.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-ember": "^8.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "loader.js": "^4.7.0",
+    "npm-run-all": "^4.1.5",
+    "qunit-dom": "^1.2.0"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config",
-    "versionCompatibility": {
-      "ember": ">=2.0.0"
-    }
+    "configPath": "tests/dummy/config"
   }
 }
